--- a/blog_list.html
+++ b/blog_list.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="blog.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/blog.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -22,18 +22,29 @@
           <li>
             <img src="image/gensin.png" alt="" />
           </li>
-          <li>
-            <a href="index.html">Home</a>
+          <li class="item-collapse">
+            <a class="active" href="index.html">Home</a>
           </li>
-          <li>
-            <a class="active" href="blog.html">List</a>
+          <li class="item-collapse">
+            <a href="blog.html">List</a>
           </li>
         </ul>
       </div>
-      <div class="nav-right">
+      <div class="nav-right item-collapse">
         <a href="contact.html">Contact Me</a>
       </div>
+      <div class="nav-right" id="barsmenu">
+        <button style="background-color: transparent; border: none; cursor: pointer"
+        onclick="openHamburger()">
+          <i class="fa-2x fa-solid fa-bars"></i>
+        </button>
+      </div>
     </nav>
+    <div class="hamburger-nav-container" id="hamburger-nav-container">
+      <a href="index.html">Home</a>
+      <a href="blog.html" class="hamburger-active">List</a>
+      <a href="contact.html">Contact Me</a>
+    </div>
     <div class="blog-detail">
         <div class="blog-detail-container">
             <h1>Putri Es dari Inazuma, Kamisato Ayaka</h1>
@@ -43,5 +54,6 @@
             Selain menjadi DPS yang kuat, dia juga memiliki kepribadian yang menarik.</p>
         </div>
     </div>
+    <script src="js/index.js"></script>
 </body>
 </html>
